--- a/MultipleDesktop.Windows.PresentationFoundation/App.xaml
+++ b/MultipleDesktop.Windows.PresentationFoundation/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MultipleDesktop.Windows.PresentationFoundation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MultipleDesktop.Windows.PresentationFoundation"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:MultipleDesktop.Windows.PresentationFoundation">
     <Application.Resources>
          
     </Application.Resources>
