Begins integrating MVVM. Creates the MainViewModel class and adds support for applying the MainViewModel to both the Windows Forms and WPF MainViews.

--- a/MultipleDesktop.Windows.PresentationFoundation/View/MainWindow.xaml
+++ b/MultipleDesktop.Windows.PresentationFoundation/View/MainWindow.xaml
@@ -1,15 +1,20 @@
-﻿<!-- TODO switch out the d:DataContext for the real ViewModel when it has been established. -->
-<Window x:Class="MultipleDesktop.Windows.PresentationFoundation.MainWindow"
+﻿<Window x:Class="MultipleDesktop.Windows.PresentationFoundation.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MultipleDesktop.Windows.PresentationFoundation"
+        xmlns:vm="clr-namespace:MultipleDesktop.Application.ViewModel;assembly=MultipleDesktop.Application"
+        
         mc:Ignorable="d"
-        xmlns:vm="clr-namespace:MultipleDesktop.Windows.PresentationFoundation.ViewModel"
         d:DataContext="{d:DesignInstance {x:Type vm:MainViewModel}}"
-        Title="{Binding Title}" Height="350" Width="525">
+        
+        Title="{Binding Title}"
+        
+        Height="350" Width="525">
+
     <Grid>
 
     </Grid>
+
 </Window>
