--- a/MultipleDesktop.Windows.PresentationFoundation/View/MainWindow.xaml
+++ b/MultipleDesktop.Windows.PresentationFoundation/View/MainWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="MultipleDesktop.Windows.PresentationFoundation.MainWindow"
+﻿<Window x:Class="MultipleDesktop.Windows.PresentationFoundation.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MultipleDesktop.Windows.PresentationFoundation"
         xmlns:vm="clr-namespace:MultipleDesktop.Application.ViewModel;assembly=MultipleDesktop.Application"
         
         mc:Ignorable="d"
